--- a/w1d2recipe/styles.css
+++ b/w1d2recipe/styles.css
@@ -1,3 +1,9 @@
+body {
+    background-color: white;
+    color: #404040;
+    font-size: 11pt;
+    font-family: georgia, Garamond, serif;
+}
 h1, h2 {
     color: #A4A400;
     background-color:  #F0F0F0 ;
@@ -5,10 +11,15 @@ h1, h2 {
 
 h1 {
     text-align: center;
+    font-size: 22pt;
 }
 
 h2 {
+    font-size: 18pt;
     text-transform: uppercase;
+}
+a {
+    color:  #A4A400;
 }
 
 #idUserComment p {
@@ -23,4 +34,8 @@ h2 {
 
 #idCopyright span{
     display: block;
+}
+
+abbr {
+    text-decoration: underline;
 }
