--- a/w1d2/styleme.css
+++ b/w1d2/styleme.css
@@ -2,9 +2,14 @@
      background-color: rgb(120, 118, 101);
      color: white;
  }
-
+h1{
+    font-size: 28pt;
+}
+h3{
+    font-size: 18pt;
+}
  h1, h3 {
-     color: #3c568a;
+     color: #39445a;
      font-family: 'Courier New', Courier, monospace;
  }
 
@@ -37,5 +42,5 @@ a {
     text-decoration: none;
 }
 a:visited {
-    color: blueviolet;
+    color: rgb(74, 84, 134);
 }
