--- a/w1d4/styles.css
+++ b/w1d4/styles.css
@@ -1,7 +1,8 @@
 header {
     background-color: lightblue;
-    height: 40px;
+    height: 100px;
     text-align: center;
+    padding-top: 30px;
 }
 .menu {
     height: 40px;
@@ -31,9 +32,10 @@ main #col3 {
 
 footer {
     background-color: rgb(2, 77, 2);
-    height: 40px;
+    height: 100px;
     text-align: center;
     color: white;
+    padding-top: 30px;
 }
 
 .menu {
