--- a/w1d4/css/flexbox.css
+++ b/w1d4/css/flexbox.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0;
+}
 header {
     background-color: lightblue;
     height: 100px;
@@ -9,9 +12,11 @@ header {
     height: 300px;  
     flex-basis: 33.33%;
 }
+
 @media(max-width:600px){
     main #col1 {
         flex-basis: 50%;
+        order: 1;
     }
     main #col2 {
         flex-basis: 100%;
@@ -19,14 +24,18 @@ header {
     }
     main #col3 {
         flex-basis: 50%;
+        order: 2;
     }
 }
 .menu {
-    height: 40px;
+    height: 50px;
     background-color: #406156;
     color: white;
+    display: flex;
+    font-size: 20px;
 }
 .menu div{
+    padding: 10px;
     border-right: 1px solid black;
 }
 
@@ -50,8 +59,4 @@ footer {
     text-align: center;
     color: white;
     padding-top: 30px;
-}
-
-.menu {
-    display: flex;
 }
